--- a/index.html
+++ b/index.html
@@ -69,7 +69,9 @@
                   <img src="./assets/file.png" width="24px">
               </div>
 
-              <button id="submit-btn">Submit</button>
+              <div class="form-btns">
+                  <button id="submit-btn">Submit</button>
+              </div>
 
           </form>
 
