--- a/single.html
+++ b/single.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="project.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,10 +15,10 @@
             <div class="left-header">
                  <img src="assets/logo.png">
                  <a href="./index.html">Home</a>
-                 <a href="#" class="active">My Project</a>
+                 <a href="./project.html" class="active">My Project</a>
             </div>
 
-            <a class="cta-btn">
+            <a class="cta-btn" href="./form.html">
                 Contact Me
             </a>
         </nav>
